glx: Compare old ctx against dummyCtx, not NULL

https://bugs.freedesktop.org/show_bug.cgi?id=29302